--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,9 +16,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@repo/api": "workspace:*",
+    "@nestjs/typeorm": "^11.0.0",
+    "@repo/shared": "workspace:*",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
