--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,6 +19,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "7.3.1",
     "@nestjs/typeorm": "^11.0.0",
     "@repo/shared": "workspace:*",
     "pg": "^8.16.3",
