--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,9 +22,11 @@
     "@nestjs/swagger": "7.3.1",
     "@nestjs/typeorm": "^11.0.0",
     "@repo/shared": "workspace:*",
+    "class-validator": "^0.14.2",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.25"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
