--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,11 +18,13 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "7.3.1",
     "@nestjs/typeorm": "^11.0.0",
     "@repo/shared": "workspace:*",
     "class-validator": "^0.14.2",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
