--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -28,6 +28,11 @@
           "require": "./dist/enums/index.js",
           "import": "./dist/enums/index.js",
           "types": "./dist/enums/index.d.ts"
+      },
+      "./interfaces": {
+          "require": "./dist/interfaces/index.js",
+          "import": "./dist/interfaces/index.js",
+          "types": "./dist/interfaces/index.d.ts"
       }
   },
   "dependencies": {
