--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,6 +23,7 @@
     "@nestjs/swagger": "7.3.1",
     "@nestjs/typeorm": "^11.0.0",
     "@repo/shared": "workspace:*",
+    "bcrypt": "^6.0.0",
     "class-validator": "^0.14.2",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
