--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,40 +15,42 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\""
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/common": "10.0.0",
+    "@nestjs/config": "4.0.2",
+    "@nestjs/core": "10.0.0",
+    "@nestjs/passport": "11.0.5",
+    "@nestjs/platform-express": "10.0.0",
     "@nestjs/swagger": "7.3.1",
-    "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/typeorm": "11.0.0",
     "@repo/shared": "workspace:*",
-    "bcrypt": "^6.0.0",
-    "class-validator": "^0.14.2",
-    "passport-jwt": "^4.0.1",
-    "pg": "^8.16.3",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "typeorm": "^0.3.25"
+    "bcrypt": "6.0.0",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.2",
+    "jsonwebtoken": "^9.0.2",
+    "passport-jwt": "4.0.1",
+    "pg": "8.16.3",
+    "reflect-metadata": "0.2.0",
+    "rxjs": "7.8.1",
+    "typeorm": "0.3.25"
   },
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@jest/globals": "29.7.0",
+    "@nestjs/cli": "10.0.0",
+    "@nestjs/schematics": "10.0.0",
+    "@nestjs/testing": "10.0.0",
     "@repo/eslint-config": "workspace:*",
     "@repo/jest-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^6.0.0",
-    "jest": "^29.7.0",
+    "@types/express": "4.17.17",
+    "@types/node": "20.3.1",
+    "@types/supertest": "6.0.0",
+    "jest": "29.7.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
+    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0",
     "typescript": "5.5.4"
   }
 }
