added husky for pre-commit check

--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "test": "turbo run test",
     "test:e2e": "turbo run test:e2e",
     "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix",
+    "prepare": "npx husky",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "prettier": "^3.2.5",
-    "turbo": "^2.5.4"
+    "husky": "9.1.7",
+    "prettier": "3.2.5",
+    "turbo": "2.5.4"
   },
   "packageManager": "pnpm@8.15.5",
   "engines": {
