--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix"
   },
   "dependencies": {
+    "@nestjs-modules/ioredis": "2.0.2",
     "@nestjs/common": "10.0.0",
     "@nestjs/config": "4.0.2",
     "@nestjs/core": "10.0.0",
@@ -27,11 +28,13 @@
     "bcrypt": "6.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
+    "ioredis": "5.6.1",
     "jsonwebtoken": "^9.0.2",
     "passport-jwt": "4.0.1",
     "pg": "8.16.3",
     "reflect-metadata": "0.2.0",
     "rxjs": "7.8.1",
+    "twilio": "^5.7.2",
     "typeorm": "0.3.25"
   },
   "devDependencies": {
