--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,6 +20,7 @@
     "@nestjs/common": "10.0.0",
     "@nestjs/config": "4.0.2",
     "@nestjs/core": "10.0.0",
+    "@nestjs/jwt": "11.0.0",
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "10.0.0",
     "@nestjs/swagger": "7.3.1",
@@ -29,7 +30,6 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
     "ioredis": "5.6.1",
-    "jsonwebtoken": "^9.0.2",
     "passport-jwt": "4.0.1",
     "pg": "8.16.3",
     "reflect-metadata": "0.2.0",
