--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,10 +26,12 @@
     "@nestjs/swagger": "7.3.1",
     "@nestjs/typeorm": "11.0.0",
     "@repo/shared": "workspace:*",
+    "@repo/request-context": "workspace:*",
     "bcrypt": "6.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
     "ioredis": "5.6.1",
+    "nestjs-i18n": "^10.5.1",
     "passport-jwt": "4.0.1",
     "pg": "8.16.3",
     "reflect-metadata": "0.2.0",
